@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2012/09/15 13:36:17 marino Exp $
+# $NetBSD: Makefile,v 1.12 2012/09/24 11:18:38 asau Exp $
 
 PKGNAME=	racket-textual-5.3
 PKGREVISION=	1
@@ -47,7 +47,7 @@ REPLACE_RACKET+=	collects/ffi/examples/$f
 
 REPLACE_INTERPRETER+=	racket
 REPLACE.racket.old=	.*racket
-REPLACE.racket.new=	$(PREFIX)/bin/racket
+REPLACE.racket.new=	$(LOCALBASE)/bin/racket
 REPLACE_FILES.racket=	$(REPLACE_RACKET)
 
 
